hello-world/k8s/staging/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: email-verification-service
   namespace: 2060-staging
   labels:
      app: nginx
spec:
   serviceName: "email-verification-service"
   replicas: 1
   selector:
      matchLabels:
         app: email-verification-service
   template:
      metadata:
         labels:
            app: email-verification-service
      spec:
         containers:
         -  name: email-verification-service-sa-container
            image: gitlab.mobiera.com:4567/2060/2060-service-agent:staging
            imagePullPolicy: Always
            volumeMounts:
            - name: email-verification-service-sa-pv
              mountPath: /root/.afj
            ports:
            -  containerPort: 3000
            -  containerPort: 3001
         -  name: email-verification-service-backend-container
            image: gitlab.mobiera.com:4567/2060/demos/2060-email-verification-service:staging
            imagePullPolicy: Always
            ports:
            -  containerPort: 2902
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: email-verification-service-pg-pv-staging
              mountPath: /var/lib/postgresql/data
         imagePullSecrets:
         -  name: dev-registry-credentials

   volumeClaimTemplates:
   - metadata:
       name: email-verification-service-sa-pv-staging
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: email-verification-service-pg-pv-staging
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
