hello-world/k8s/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: email-verification-service
  namespace: 2060-staging
spec:
  selector:
    app: email-verification-service
  ports:
  - name: didcomm
    port: 3001
    targetPort: 3001
    protocol: TCP
  - name: admin
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: q
    port: 2902
    targetPort: 2902
    protocol: TCP
